@@ -1,3 +1,7 @@
+2007-09-16  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/ReportBase/_ReportDialog.py: Cleanup.
+	* src/glade/paper_settings.glade: Remove frames.
+
 2007-09-15  Douglas S. Blank <dblank@cs.brynmawr.edu>
 	* src/ReportBase/__init__.py:
 	* src/ReportBase/_MenuOptions.py:
